fix right spacing of recaptcha

--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -46,6 +46,7 @@
 .recaptcha-badge {
 	display: flex;
 	justify-content: flex-end;
+	margin-right: 8px;
 }
 
 .contact-submit-div {
